add redis supported.

--- a/storage.conf
+++ b/storage.conf
@@ -1,14 +1,25 @@
 {
   "tcpAddr": "127.0.0.1:10080",
   "unixAddr": "/tmp/storage.sock",
+  "lockLifeTime": "5m",
+  "localRedisInstance": false,
+
   "mysql": {
-    "host": "127.0.0.1",
-    "port": 3306,
+    "addr": "127.0.0.1:3306",
     "dbName": "xz",
     "user": "root",
-    "pwd": "",
+    "pwd": "A563388a",
+    "encoding": "utf8",
     "pool": 10,
     "idle": "5m",
+    "life": "1h"
+  },
+
+  "redis": {
+    "addr": "127.0.0.1:6379",
+    "maxIdle": 128,
+    "maxActive": 128,
+    "idle": "30m",
     "life": "1h"
   }
 }
