Setting buffer-size for unix-udp.

--- a/storage.conf
+++ b/storage.conf
@@ -2,7 +2,7 @@
   "tcpAddr": "127.0.0.1:10080",
   "unixAddr": "/tmp/storage.sock",
   "lockLifeTime": "5m",
-  "localRedisInstance": false,
+  "localRedisInstance": true,
 
   "mysql": {
     "addr": "127.0.0.1:3306",
